Fixed ETCD transaction logic